--- a/2_Bindings/BindingsOverview/MainWindow.xaml
+++ b/2_Bindings/BindingsOverview/MainWindow.xaml
@@ -1,8 +1,59 @@
 ﻿<Window x:Class="BindingsOverview.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
-    <Grid>
-        
+        Title="MainWindow"
+        Width="525"
+        Height="350"
+        Loaded="MainWindow_OnLoaded">
+    <Grid Margin="15">
+        <Grid.Resources>
+            <Style TargetType="TextBlock">
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
+            <Style TargetType="Label">
+                <Setter Property="VerticalAlignment" Value="Center" />
+            </Style>
+            <Style TargetType="TextBox">
+                <Setter Property="Height" Value="20" />
+            </Style>
+        </Grid.Resources>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="100" />
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+            <RowDefinition Height="30" />
+        </Grid.RowDefinitions>
+        <TextBlock Text="ID" />
+        <TextBlock Grid.Row="1"
+                   Grid.Column="0"
+                   Text="User" />
+        <TextBlock Grid.Row="2"
+                   Grid.Column="0"
+                   Text="First Name" />
+        <TextBlock Grid.Row="3"
+                   Grid.Column="0"
+                   Text="Last Name" />
+        <TextBlock Grid.Row="4"
+                   Grid.Column="0"
+                   Text="Phone" />
+        <Label Grid.Column="1"
+               Content="{Binding Id}" />
+        <TextBox Grid.Row="1"
+                 Grid.Column="1"
+                 Text="{Binding Username}" />
+        <TextBox Grid.Row="2"
+                 Grid.Column="1"
+                 Text="{Binding FirstName}" />
+        <TextBox Grid.Row="3"
+                 Grid.Column="1"
+                 Text="{Binding LastName}" />
+        <TextBox Grid.Row="4"
+                 Grid.Column="1"
+                 Text="{Binding Phone}" />
     </Grid>
 </Window>
